[gd_scene load_steps=10 format=3 uid="uid://cjb5d3y01afs0"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_548om"]
[ext_resource type="PackedScene" uid="uid://mwj3r57xheoc" path="res://scenes/port.tscn" id="2_8fsmx"]
[ext_resource type="Script" path="res://scripts/health.gd" id="3_653yq"]
[ext_resource type="Texture2D" uid="uid://bvr2re0rcaqnl" path="res://art/health.png" id="4_8rd68"]
[ext_resource type="Texture2D" uid="uid://qoaa7g08bncg" path="res://art/bg.png" id="5_wj7ko"]
[ext_resource type="AudioStream" uid="uid://crouqp4evu2bt" path="res://sounds/skip.wav" id="6_7gi43"]
[ext_resource type="AudioStream" uid="uid://cx31gmhn1u515" path="res://sounds/pass.wav" id="7_bgqvq"]

[sub_resource type="Curve2D" id="Curve2D_int2p"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 345, 648, 0, 0, 0, 0, 507, 648)
}
point_count = 2

[sub_resource type="LabelSettings" id="LabelSettings_ro40y"]
font_size = 50

[node name="main" type="Node2D"]
script = ExtResource("1_548om")

[node name="SpawnPackets" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="PacketPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_int2p")

[node name="PacketSpawnLocation" type="PathFollow2D" parent="PacketPath"]
position = Vector2(345, 648)
loop = false

[node name="Ports" type="Node" parent="."]

[node name="port0" parent="Ports" instance=ExtResource("2_8fsmx")]

[node name="port1" parent="Ports" instance=ExtResource("2_8fsmx")]
position = Vector2(0, 224)

[node name="port2" parent="Ports" instance=ExtResource("2_8fsmx")]
position = Vector2(0, 448)

[node name="port3" parent="Ports" instance=ExtResource("2_8fsmx")]
position = Vector2(812, 0)

[node name="port4" parent="Ports" instance=ExtResource("2_8fsmx")]
position = Vector2(812, 224)

[node name="port5" parent="Ports" instance=ExtResource("2_8fsmx")]
position = Vector2(812, 448)

[node name="Packets" type="Node" parent="."]

[node name="PortPertubator" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Health" type="ReferenceRect" parent="."]
offset_left = 446.0
offset_top = 35.0
offset_right = 732.0
offset_bottom = 89.0
script = ExtResource("3_653yq")

[node name="1" type="TextureRect" parent="Health"]
layout_mode = 0
offset_left = 4.0
offset_top = 2.0
offset_right = 54.0
offset_bottom = 52.0
texture = ExtResource("4_8rd68")

[node name="2" type="TextureRect" parent="Health"]
layout_mode = 0
offset_left = 59.0
offset_top = 2.0
offset_right = 109.0
offset_bottom = 52.0
texture = ExtResource("4_8rd68")

[node name="3" type="TextureRect" parent="Health"]
layout_mode = 0
offset_left = 112.0
offset_top = 2.0
offset_right = 162.0
offset_bottom = 52.0
texture = ExtResource("4_8rd68")

[node name="4" type="TextureRect" parent="Health"]
layout_mode = 0
offset_left = 167.0
offset_top = 2.0
offset_right = 217.0
offset_bottom = 52.0
texture = ExtResource("4_8rd68")

[node name="5" type="TextureRect" parent="Health"]
layout_mode = 0
offset_left = 222.0
offset_top = 2.0
offset_right = 272.0
offset_bottom = 52.0
texture = ExtResource("4_8rd68")

[node name="Score" type="Label" parent="."]
offset_left = 542.0
offset_top = 113.0
offset_right = 600.0
offset_bottom = 185.0
text = "00"
label_settings = SubResource("LabelSettings_ro40y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Accelerate" type="Timer" parent="."]
wait_time = 7.5
autostart = true

[node name="Complexify" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="Bg" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(576, 324)
texture = ExtResource("5_wj7ko")

[node name="SkipSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_7gi43")
volume_db = 5.03

[node name="PassSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_bgqvq")

[connection signal="timeout" from="SpawnPackets" to="." method="_on_spawn_packets_timeout"]
[connection signal="right_process" from="Ports/port0" to="." method="_on_port_right_process"]
[connection signal="wrong_process" from="Ports/port0" to="." method="misplay"]
[connection signal="right_process" from="Ports/port1" to="." method="_on_port_right_process"]
[connection signal="wrong_process" from="Ports/port1" to="." method="misplay"]
[connection signal="right_process" from="Ports/port2" to="." method="_on_port_right_process"]
[connection signal="wrong_process" from="Ports/port2" to="." method="misplay"]
[connection signal="right_process" from="Ports/port3" to="." method="_on_port_right_process"]
[connection signal="wrong_process" from="Ports/port3" to="." method="misplay"]
[connection signal="right_process" from="Ports/port4" to="." method="_on_port_right_process"]
[connection signal="wrong_process" from="Ports/port4" to="." method="misplay"]
[connection signal="right_process" from="Ports/port5" to="." method="_on_port_right_process"]
[connection signal="wrong_process" from="Ports/port5" to="." method="misplay"]
[connection signal="timeout" from="PortPertubator" to="." method="_on_port_pertubator_timeout"]
[connection signal="health_emptied" from="Health" to="." method="_on_health_emptied"]
[connection signal="timeout" from="Accelerate" to="." method="_on_accelerate_timeout"]
[connection signal="timeout" from="Complexify" to="." method="_on_complexify_timeout"]
